--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
-
-
 </head>
 <body>
 	<div class="wrapper">
@@ -74,7 +72,7 @@
 			</table>
 			<div id="statsContainer">
 				<h3>Strikes: 0</h3>
-				<h3 class="push-right"> Time: 2:16</h3>
+				<h3 class="push-right"> Time: <span id="counter">0:00</span></h3>
 			</div> 
 			<div id="buttonContainer">
 				<button type="button" class="button" id="newGameButton">New</button>
